--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp1.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp1.html
@@ -24,6 +24,9 @@
   <p>Подключаем пространство имен</p>
   <code>using namespace std;</code>
 
+  <p>Определяем короткие названия типам</p>
+  <code>typedef long long ll;</code>
+
   <p>Ускорение ввода-вывода. Отключаем синхронизацию с C-потоками и отвязываем cin/cout для ускорения работы.</p>
 <pre>
 // ускорение ввода-вывода
