--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp10.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp10.html
@@ -1455,6 +1455,12 @@ s -5
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/gym/104454/problem/N" target="_blank">Задача N</a>
+      <br><a href="https://codeforces.com/gym/104454" target="_blank">ICPC Central Russia Regional Contest, 2021</a>
+    </div>
+
     <h4>Пример 3</h4>
 <pre>
 7
