--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp17.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp17.html
@@ -725,6 +725,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/gym/104454/problem/B" target="_blank">Задача B</a>
+      <br><a href="https://codeforces.com/gym/104454" target="_blank">ICPC Central Russia Regional Contest, 2021</a>
+    </div>
+
     <p>Динамический объект. Соберем матрицу DP из n+1 столбцов и n*k + 1 строк. Каждый столбец это количество выстрелов от 0 до n. Каждая строка это набранные очки от 0 (никуда не попала) до n*k (все выстрелы попали в максимальное количество очков).</p>
     <p>Что храним. В ячейке DP[i][j] храним количество способов которыми Ира может получить i очков за j выстрелов. Ставим 0 если невозможно получить i очков за j выстрелов.</p>
     <p>Как считаем ячейку. Надо определить позиции из которых можно придти в ячейку DP[i][j] за один выстрел. Это столбик j-1. Это строки от i-1 до i-k.</p>
@@ -847,6 +853,16 @@ int main() {
     <p>В первом примере единственное красивое построение: 121</p>
     <p>Во втором примере существует 5 красивых построений: 12122, 12212, 21212, 21221, 22121</p>
   </details>
+
+  <details>
+    <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/118/problem/D" target="_blank">Задача D</a>
+      <br><a href="https://codeforces.com/contest/118" target="_blank">Codeforces Beta Round 89 (Div. 2)</a>
+    </div>
+
+  </details>
 </article>
 
 
@@ -892,6 +908,17 @@ int main() {
 
     <p>Во втором примере имеет смысл испечь только 4 булочки без начинки.</p>
   </details>
+
+  <details>
+    <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/106/problem/C" target="_blank">Задача C</a>
+      <br><a href="https://codeforces.com/contest/106" target="_blank">Codeforces Beta Round 82 (Div. 2)</a>
+    </div>
+
+  </details>
+
 </article>
 
 
@@ -931,6 +958,17 @@ int main() {
 DDRR
 </pre>
   </details>
+
+  <details>
+    <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/2/problem/B" target="_blank">Задача B</a>
+      <br><a href="https://codeforces.com/contest/2" target="_blank">Codeforces Beta Round 2</a>
+    </div>
+
+  </details>
+
 </article>
 
 
@@ -1008,6 +1046,17 @@ DDRR
 
     <p>Суммарная площадь в ответа равна 2⋅3 = 6.</p>
   </details>
+
+  <details>
+    <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1722/problem/E" target="_blank">Задача 1722E</a>
+      <br><a href="https://codeforces.com/contest/1722" target="_blank">Codeforces Round 817 (Div. 4)</a>
+    </div>
+
+  </details>
+
 </article>
 
 
@@ -1077,5 +1126,16 @@ DDRR
     <p>В пятом наборе входных данных упадут банки с номерами 1², 2² и 4², поэтому ответ равен</p>
     <code>1²+2²+4²=1+4+16=21.</code>
   </details>
+
+  <details>
+    <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1829/problem/G" target="_blank">Задача 1829G</a>
+      <br><a href="https://codeforces.com/contest/1829" target="_blank">Codeforces Round 871 (Div. 4)</a>
+    </div>
+
+  </details>
+
 </article>
 
