--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp7.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp7.html
@@ -2230,7 +2230,7 @@ int main() {
 
     <div>
       <a href="https://codeforces.com/contest/1824/problem/A" target="_blank">Задача 1824A</a>
-      <br><a href="https://codeforces.com/contest/1824A" target="_blank">Codeforces Round 872 (Div. 1) 2023-05-08</a>
+      <br><a href="https://codeforces.com/contest/1824" target="_blank">Codeforces Round 872 (Div. 1) 2023-05-08</a>
     </div>
 
     <p>Посчитаем количество человек с первым способом cnt1, со вторым способом cnt2, с третьим способом cnt3.</p>
