--- a/src/components/alg/alg-pract/codeforces/pages/elem-100219-Round1.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-100219-Round1.html
@@ -2,6 +2,16 @@
   <a href="https://codeforces.com/contest/1" target="_blank">Codeforces Beta Round 1 2010-02-19</a>
 </article>
 
+<article class="article">
+  <h3>Переключение десктопной/мобильной версии сайта</h3>
+  <p>Для переключения на мобильную версию сайта, нужно в конце адресной строки дописать</p>
+  <code>?mobile=true</code>
+  <p>Эта настройка сохраняется в cookies и при каждом заходе на сайт, вы будете попадать на мобильную версию.</p>
+  <p>Чтобы вернуть десктопную версию сайта, нужно в конце адресной строки дописать</p>
+  <code>?mobile=false</code>
+  <p>Пример</p>
+  <code>https://codeforces.com/profile/frontend200tb?mobile=false</code>
+</article>
 
 <!-- Содержание -->
 <article class="article">
