--- a/src/components/alg/alg-pract/codeforces/pages/elem-220417-Round784.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-220417-Round784.html
@@ -278,6 +278,61 @@ YES
   <p>В третьем примере все элементы уже одной чётности и ответ «YES».</p>
   <p>В четвёртом примере мы можем применить одну операцию и увеличить элементы на нечётных позициях на 1, после чего получим массив [1001,1,1001,1,1001], все элементы которого нечётные, так что ответ «YES».</p>
   </details>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Заметим, что массив будет содержать только четные или только нечетные числа только в том случае, если изначально четность всех нечетных элементов одинакова и четность всех четных элементов одинакова.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+// условная компиляция
+#ifdef _DEBUG
+  freopen("input.txt", "rt", stdin);
+  freopen("output.txt", "wt", stdout);
+#endif
+
+  // число тестов
+  int t;
+  cin >> t;
+
+  while (t--) {
+    // ввод данных
+    int n; // длина массива
+    cin >> n;
+    vector&lt;int&gt; A(n + 1);
+    for (int i = 1; i &lt;= n; i++) {
+      cin >> A[i];
+    }
+
+    // решение
+    bool res = true;
+    int k1 = A[1] % 2; // четность нечетных элементов
+    int k2 = A[2] % 2; // четность четных элементов
+
+    for (int i = 3; res && i &lt;= n; i += 2) {
+      if (k1 != A[i] % 2)
+        res = false;
+    }
+
+    for (int i = 4; res && i &lt;= n; i += 2) {
+      if (k2 != A[i] % 2)
+        res = false;
+    }
+
+    // вывод результата
+    if (res) {
+      cout &lt;&lt; "YES\n";
+    } else {
+      cout &lt;&lt; "NO\n";
+    }
+  }
+}
+</pre>
+  </details>
 </article>
 
 
