--- a/src/components/code/code-c/c-courses/pages/elem-meta-c.html
+++ b/src/components/code/code-c/c-courses/pages/elem-meta-c.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <h1>Руководство по языку программирования Си</h1>
+  <h1>Руководство по Си</h1>
   <p>Конспект курса</p>
   <p><a href="https://metanit.com/c/tutorial/" target="_blank">https://metanit.com/c/tutorial/</a></p>
   <p>Последнее обновление: 09.03.2025</p>
