--- a/src/components/code/code-cpp/cpp-base/pages/elem-links.html
+++ b/src/components/code/code-cpp/cpp-base/pages/elem-links.html
@@ -81,6 +81,7 @@
   <p><a href="https://purecodecpp.com/">https://purecodecpp.com/</a> Основы программирования на С++ для начинающих</p>
   <p><a href="https://ravesli.com/uroki-cpp/">https://ravesli.com/uroki-cpp/</a> Уроки С++</p>
   <p><a href="https://cpp-school.unigine.com/">cpp-school.unigine.com</a> Бесплатный онлайн-курс программирования на С++ для продвинутых</p>
+  <p><a href="https://it.kgsu.ru/">it.kgsu.ru</a> Информатика и программирование шаг за шагом</p>
 </article>
 
 
