--- a/src/components/code/code-cpp/cpp-courses/pages/elem-meta-cpp.html
+++ b/src/components/code/code-cpp/cpp-courses/pages/elem-meta-cpp.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <h1>Руководство по языку программирования C++</h1>
+  <h1>Руководство по C++</h1>
   <p>Конспект курса</p>
   <p><a href="https://metanit.com/cpp/tutorial/" target="_blank">https://metanit.com/cpp/tutorial/</a></p>
   <p>Последнее обновление: 18.03.2025</p>
